# infuse-sdk

./: .checkpatch.conf  .clang-format  .codecov.yml  .gitattributes  .gitignore  .sonarcloud.properties  CMakeLists.txt  Kconfig.defaults.bluetooth  Kconfig.defaults.core  Kconfig.defaults.net  Kconfig.defaults.nrf  Kconfig.defaults.sensor  Kconfig.defaults.ztest  Kconfig.eis  Kconfig.infuse  README.rst  ruff.toml  sonar-project.properties  test.c  west.yml
doc/: CMakeLists.txt  Makefile  conf.py  eis.doxyfile.in  index.rst  infuse.doxyfile.in  requirements.txt
doc/_doxygen/: mainpage.md
doc/_templates/: layout.html  zversions.html
doc/cloud/: coap.rst  index.rst  mqtt.rst  rest.rst
doc/contributing/: documentation.rst  index.rst
doc/contributing/documentation/: documentation_generation.rst
doc/embedded/: app_features.rst  features.rst  hardware.rst  index.rst  samples.rst  services.rst  tool_features.rst
doc/embedded/app_features/: data_logger.rst  epacket.rst  infuse_workqueue.rst  kv_store.rst  rpc.rst  task_runner.rst  tdf.rst  tfm.rst  zbus.rst
doc/embedded/dts/: devicetree.rst
doc/embedded/features/: app_states.rst  cpatch.rst  kv_store.rst  reboot.rst  rpc.rst  tdf.rst  watchdog.rst
doc/embedded/services/: civil_time.rst  epacket.rst  epoch_time.rst  kv_store.rst
doc/embedded/tool_features/: release_framework.rst  user_definitions.rst  vscode.rst
doc/getting_started/: index.rst
doc/getting_started/embedded/: index.rst  wsl.rst
doc/guides/embedded/: index.rst  wsl.rst
doc/platform/: design_goals.rst  index.rst  integrations.rst  provisioning.rst  security_model.rst
doc/tooling/: index.rst  python_tools.rst  release_framework.rst  user_definitions.rst  vscode.rst
doc/tooling/python/: python_bt_log.rst  python_cloud.rst  python_credentials.rst  python_gateways.rst  python_ota_upgrade.rst  python_provision.rst  python_rpc.rst  python_tdf.rst
lib/: CMakeLists.txt  Kconfig  common_boot.c  identifiers.c  infuse_work_q.c  reboot.c  security.c  version.c
lib/auto/: CMakeLists.txt  Kconfig  bluetooth_conn_log.c  charge_accumulator.c  charger_control.c  kv_state_observer.c  kv_update_log.c  littlefs_kv_sync.c  location_timezone.c  soc_device_control.c  time_sync_log.c  wifi_conn_log.c
lib/crypto/: CMakeLists.txt  Kconfig
lib/crypto/XKCP/: CMakeLists.txt
lib/crypto/ascon/: CMakeLists.txt  README.md
lib/crypto/hardware_unique_key/: CMakeLists.txt  Kconfig  huk_nrf_kmu.c  huk_tfm.c
lib/crypto/tf-psa-crypto/: CMakeLists.txt  Kconfig  oberon_accelerator.c
lib/debug/: CMakeLists.txt  Kconfig  workqueue_blocker.c
lib/math/: CMakeLists.txt  Kconfig  cartesian.c  common.c  geodesy.c  hamming_8_4.c  mean.c  statistics.c
lib/memfault/: CMakeLists.txt  Kconfig  infuse_memfault.c  infuse_metrics.c
lib/modem_monitor/: CMakeLists.txt  Kconfig  modem_monitor.c  modem_monitor.h
lib/modem_monitor/modem_cellular/: CMakeLists.txt  Kconfig  cellular_modem_monitor.c
lib/modem_monitor/modem_nrf9x/: CMakeLists.txt  Kconfig  nrf_modem_lib_sim.c  nrf_modem_monitor.c
lib/nrf_modem_lib/: CMakeLists.txt  Kconfig  nrf_modem_lib_sim.c  nrf_modem_monitor.c
lib/security/: CMakeLists.txt  Kconfig  alternate_network.yaml  default_network.yaml  keygen.py  security.c
lib/security/hardware_unique_key/: CMakeLists.txt  Kconfig  huk_hwid_hash.c  huk_nrf_kmu_cc3xx.c  huk_nrf_kmu_cracen.c  huk_tfm.c
lib/states/: CMakeLists.txt  Kconfig  application_states.c
lib/time/: civil.c  epoch.c
samples/crypto/profiling/: CMakeLists.txt  README.md  prj.conf  sample.yaml
samples/gnss/ubx_signal_monitor/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
subsys/: CMakeLists.txt  Kconfig
subsys/algorithm_runner/: CMakeLists.txt  Kconfig  runner.c
subsys/algorithm_runner/algorithms/: CMakeLists.txt  Kconfig  alg_demo.c  alg_movement_threshold.c  alg_stationary_windowed.c  alg_tilt.c
subsys/algorithms/: CMakeLists.txt  Kconfig  algorithm_build.cmake  algorithm_exports.c  build_helpers.cmake  exported_sym_link_args.cmake  file2hex.cmake  llext_sections.ld
subsys/algorithms/profiles/: base.cmake  profile_cortex_m3.cmake  profile_cortex_m33.cmake  profile_cortex_m4.cmake
subsys/bluetooth/: CMakeLists.txt  Kconfig  assert_handler.c  controller_manager.c  gatt.c  legacy_adv.c
subsys/cpatch/: CMakeLists.txt  Kconfig  patch.c
subsys/data_logger/: CMakeLists.txt  Kconfig  data_logger.c
subsys/data_logger/backends/: Kconfig  backend_api.h  common.h  disk_access.c  epacket.c  epacket.h  exfat.c  exfat.h  exfat_common.c  exfat_common.h  exfat_multi_file.c  exfat_single_file.c  flash_map.c  flash_map.h  shim.c
subsys/data_logger/high_level/: tdf_data_logger.c
subsys/dfu/: CMakeLists.txt  Kconfig  dfu_exfat.c  dfu_helpers.c
subsys/epacket/: CMakeLists.txt  Kconfig  epacket.c  filter.c  forwarding.c  forwarding.h  handlers.c  keys.c  security_test_stubs.c
subsys/epacket/interfaces/: Kconfig  epacket_bt_adv.c  epacket_bt_adv_crypt.c  epacket_bt_central.c  epacket_bt_gatt_crypt.c  epacket_bt_peripheral.c  epacket_common_crypt.c  epacket_dummy.c  epacket_hci.c  epacket_internal.h  epacket_serial.c  epacket_serial_async.c  epacket_serial_crypt.c  epacket_serial_interrupt.c  (+5 more)
subsys/fs/: CMakeLists.txt  Kconfig
subsys/memfault/: CMakeLists.txt  Kconfig
subsys/mgmt/: CMakeLists.txt
subsys/net/: CMakeLists.txt  Kconfig
subsys/rpc/: CMakeLists.txt  Kconfig  client.c  command_runner.c  command_runner.h  server.c  server.h
subsys/task_runner/: CMakeLists.txt  Kconfig  auto_iterate.c  runner.c  schedule.c
subsys/tdf/: CMakeLists.txt  Kconfig  diffs.c  diffs.h  tdf.c
subsys/validation/: CMakeLists.txt  Kconfig  validation_bluetooth.c  validation_button.c  validation_cellular_modem.c  validation_die_temp.c  validation_disk.c  validation_dmic.c  validation_env.c  validation_flash.c  validation_gnss_nrf9x.c  validation_gnss_ubx.c  validation_imu.c  validation_leds.c  validation_leds_controller.c  validation_leds_gpio.c  validation_lora.c  validation_nrf70_radio_test.c  validation_nrf_modem.c  validation_pwr.c  validation_wifi.c
subsys/zbus/: Kconfig
(+1773 files in other folders)
