# Infuse-IoT libraries compilation

zephyr_sources(version.c)
zephyr_sources_ifdef(CONFIG_INFUSE_WORKQ infuse_work_q.c)
zephyr_sources_ifdef(CONFIG_INFUSE_REBOOT_COMPILE reboot.c)
zephyr_sources_ifdef(CONFIG_INFUSE_COMMON_BOOT common_boot.c)
zephyr_sources_ifdef(CONFIG_INFUSE_EPOCH_TIME time/epoch.c)

add_subdirectory(auto)
add_subdirectory(debug)
add_subdirectory(states)
add_subdirectory_ifdef(CONFIG_INFUSE_MATH math)
add_subdirectory_ifdef(CONFIG_INFUSE_SDK vendor)
add_subdirectory_ifdef(CONFIG_INFUSE_SECURITY security)
add_subdirectory_ifdef(CONFIG_CRYPTO_ASCON crypto/ascon)
add_subdirectory_ifdef(CONFIG_CRYPTO_XOODYAK crypto/XKCP)
add_subdirectory_ifdef(CONFIG_INFUSE_MEMFAULT memfault)
add_subdirectory_ifdef(CONFIG_INFUSE_MODEM_MONITOR modem_monitor)
