# Infuse-IoT subsys compilation

add_subdirectory_ifdef(CONFIG_INFUSE_ALGORITHMS algorithms)
add_subdirectory_ifdef(CONFIG_ALGORITHM_RUNNER algorithm_runner)
add_subdirectory_ifdef(CONFIG_BT bluetooth)
add_subdirectory_ifdef(CONFIG_INFUSE_CPATCH cpatch)
add_subdirectory_ifdef(CONFIG_DATA_LOGGER data_logger)
add_subdirectory_ifdef(CONFIG_EPACKET epacket)
add_subdirectory_ifdef(CONFIG_LOG logging/backends)
add_subdirectory_ifdef(CONFIG_TDF tdf)
add_subdirectory_ifdef(CONFIG_INFUSE_RPC rpc)
add_subdirectory_ifdef(CONFIG_TASK_RUNNER task_runner)
add_subdirectory_ifdef(CONFIG_MODEM_MODULES modem/backends)
add_subdirectory_ifdef(CONFIG_INFUSE_VALIDATION validation)

add_subdirectory(dfu)
add_subdirectory(fs)
add_subdirectory(mgmt)
add_subdirectory(net)
